--- a/compose.yaml
+++ b/compose.yaml
@@ -7,43 +7,39 @@
 # You can add other services your application may depend on here, such as a
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
+version: '3.8'
+
 services:
-  server:
-    build:
+  app:
+    build: 
       context: .
+      dockerfile: Dockerfile
+    container_name: fastapi-container
     ports:
-      - 8000:8000
+      - 8000:80
+    volumes:
+      - ./app:/code/app
+    depends_on:
+      - mysql-db
+    networks:
+      - app-network
+  
+  mysql-db:
+    image: mysql:latest
+    container_name: mysql-container
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: 1qaz2wsx!QAZ@WSX
+      MYSQL_DATABASE: academicAlly
+      MYSQL_USER: test1234
+      MYSQL_PASSWORD: academicA!!y24
+    volumes:
+      - ./mysql-data:/var/lib/mysql
+      - ./SQL:/docker-entrypoint-initdb.d  # Mount the init-scripts directory
+    networks:
+      - app-network
 
-# The commented out section below is an example of how to define a PostgreSQL
-# database that your application can use. `depends_on` tells Docker Compose to
-# start the database before your application. The `db-data` volume persists the
-# database data between container restarts. The `db-password` secret is used
-# to set the database password. You must create `db/password.txt` and add
-# a password of your choosing to it before running `docker compose up`.
-#     depends_on:
-#       db:
-#         condition: service_healthy
-#   db:
-#     image: postgres
-#     restart: always
-#     user: postgres
-#     secrets:
-#       - db-password
-#     volumes:
-#       - db-data:/var/lib/postgresql/data
-#     environment:
-#       - POSTGRES_DB=example
-#       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
-#     expose:
-#       - 5432
-#     healthcheck:
-#       test: [ "CMD", "pg_isready" ]
-#       interval: 10s
-#       timeout: 5s
-#       retries: 5
-# volumes:
-#   db-data:
-# secrets:
-#   db-password:
-#     file: db/password.txt
-
+networks:
+  app-network:
+    driver: bridge
