--- a/compose-ec2.yaml
+++ b/compose-ec2.yaml
@@ -5,4 +5,17 @@ services:
     image: proven24/nimblefrontendtest:v1.0
     ports:
       - "3000:3000"
-    restart: always
+    depends_on:
+      - fastapi-app
+
+  fastapi-app:
+    image: proven24/nimblebackendtest:v1.1
+    ports:
+      - "8000:8000"
+    depends_on:
+      - mysql-db
+
+  mysql-db:
+    image: proven24/databasetest:v1.0
+    ports:
+      - "3306:3306"
