Added database variables to compose.

--- a/compose-ec2.yaml
+++ b/compose-ec2.yaml
@@ -10,6 +10,11 @@ services:
 
   fastapi-app:
     image: proven24/nimblebackendtest:v1.1
+    environment:
+      MYSQL_ROOT_PASSWORD: 1qaz2wsx!QAZ@WSX
+      MYSQL_DATABASE: academicAlly
+      MYSQL_USER: test1234
+      MYSQL_PASSWORD: academicA!!y24
     ports:
       - "8000:8000"
     depends_on:
