Bug fixes for user authentication.  Added SQL folder for building database containers.  Adjust yaml to build database containers with volumes for data persistance.

--- a/compose-ec2.yaml
+++ b/compose-ec2.yaml
@@ -22,5 +22,11 @@ services:
       MYSQL_DATABASE: academicAlly
       MYSQL_USER: test1234
       MYSQL_PASSWORD: academicA!!y24
+    volumes:
+      - ./SQL:/docker-entrypoint-initdb.d
+      - database-data:/var/lib/mysql
     ports:
       - "3307:3306"
+
+volumes:
+  database-data:
